tinyc/test/good/cast-to-void.c
int main()
{
    (void) 42;
    return 0;
}
