tinyc/test/bad/void-as-bool-do.c
void v() {}

int main()
{
    do break; while ( v() );
    return 0;
}
